--- a/UniqueNumberInArray/index.html
+++ b/UniqueNumberInArray/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Unique number in array</title>
+    <script src="index.js"></script>
 </head>
 <body></body>
 </html>
