--- a/UniqueNumberInArray/index.html
+++ b/UniqueNumberInArray/index.html
@@ -3,7 +3,9 @@
 <head>
     <meta charset="UTF-8"/>
     <title>Unique number in array</title>
+    <script src="https://en.js.cx/test/libs.js"></script>
     <script src="index.js"></script>
+    <script src="tests.js"></script>
 </head>
 <body></body>
 </html>
